Colocando link entre a lista e o adjetivo de cada pessoa e colocando um link para busca

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -8,16 +8,23 @@
         <h1>Exercícios</h1>
         <p>Pessoas que já conheci na Trybe:</p>
         <ul>
-            <li>Eric Cruz</li>
-            <li>Baêta</li>
-            <li>Gabi Martins</li>
-            <li>Ronald</li>
+            <li><a href= "#adjetivo1">Eric Cruz</a></li>
+            <p id="adjetivo1">Cara simpático, estudante da tribo A!</p>
+            <li><a href= "#adjetivo2">Baêta</a></li>
+            <p id="adjetivo2">Mentor bastante técnico, detentor do conhecimento!</p>
+            <li><a href="#adjetivo3">Gabi Martins</a></li>
+            <p id="adjetivo3">Time de facilitação, presente nos momentos iniciais e encerramentos</p>
+            <li><a href="#adjetivo4">Ronald</a></li>
+            <p id="adjetivo4">Mentor assim como o Baêta, ótima explicação</p>
             <br><br>
             <img src="https://imagens.ne10.uol.com.br/img/imagens/2018/12/05/748x410/5f6b2d9579_design-sem-nome.jpg"width=400px alt="Mão se tocando atráves de computadores"><br> 
             <em>Essa foto que representa nossa amizade até então virtual!</em>
             <br><br>
             <h2>E esse é o mais novo estudante da Trybe:</h2>
-            <img src="eu.jpeg" height=300px  width=200px>
+            <img src="eu.jpeg" height=300px  width=200px alt="Foto de pessoa estudante da trybe sorrindo"><br>
+            <em>"Foto não tão recente de João Pedro Ortega"</em>
+            <h2>Para mais informações sobre as pessoas que estão na lista,<br>basta acessar o link abaixo para busca:</h2>
+            <a href="https://www.google.com/"target="_blank"><em>Clique aqui para ir ao site apropriado de busca</em></a>
 
         </ul>
     </body>
