Cria uma class para modificar cor da lista e do paragrafo ao mesmo tempo

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -8,16 +8,15 @@
             color: orange;
             font-size:65px
         }
-        body
-        #list-color {
-            background-color: yellow;
-        }
+        .modifica-color {
+            background-color:green ;
+        } 
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul id="list-color">
+    <p class="modifica-color">Qual é a sua cor favorita?</p>
+    <ul class="modifica-color">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
