Modifica a font de h1 para sans-serif

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -5,6 +5,7 @@
     <title>HTML</title>
     <style>
         h1 {
+            font-family:sans-serif ;
             color: orange;
             font-size:65px
         }
