Modifica o tamanho da fonte da tag p para 600

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -12,6 +12,9 @@
         .modifica-color {
             background-color:green ;
         } 
+        p {
+          font-weight: 600;
+        }
     </style>
   </head>
   <body>
