--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -15,6 +15,9 @@
         p {
           font-weight: 600;
         }
+        body {
+          font-size:16px;
+        }
     </style>
   </head>
   <body>
