--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -10,13 +10,15 @@
             font-size:65px
         }
         .modifica-color {
-            background-color:green ;
+            background-color:green;
+            line-height:35px;
         } 
         p {
           font-weight: 600;
           font-size: 3em;
         }
         body {
+          font-style: oblique;
           font-size:16px;
         }
     </style>
