--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -14,6 +14,7 @@
             line-height:35px;
         } 
         p {
+          text-align:center;
           font-weight: 600;
           font-size: 3em;
         }
