--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -22,6 +22,9 @@
           font-style: oblique;
           font-size:16px;
         }
+        ul {
+          text-decoration: underline;
+        }
     </style>
   </head>
   <body>
