Modifica a cor de cada elemento da lista de acordo com seu texto

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-cdd-primeiros-passos-em-css/index.html
@@ -25,15 +25,24 @@
         ul {
           text-decoration: underline;
         }
+        #amarelo {
+          color: yellow;
+        }
+        #vermelho {
+          color: red;
+        }
+        #marrom {
+          color: brown;
+        }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="modifica-color">Qual é a sua cor favorita?</p>
     <ul class="modifica-color">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
