Adicionando lista ul, e style-list

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/pseudo.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/pseudo.html
@@ -12,5 +12,10 @@
         <li>Google</li>
         <li>Facebook</li></ol></div>
     <p>Principais motivos para eu gostar deles</p>
+    <div><ul><li>Sites que nos ajudaram com coisas do dia a dia</li>
+            <li>Facilitam nossas vidas</li>
+            <li>Ajudam a se comunicar com o mundo</li>
+
+    </ul></div>
   </body>
 </html>
