--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/exercicio-Cores/para-Fixar-II.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/exercicio-Cores/para-Fixar-II.html
@@ -9,19 +9,19 @@
   <h1>Paleta de Cores</h1>
   <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
   <div>
-    <h3 class="vermelho">Cor primária</h3>
+    <h3>Cor primária</h3>
   </div>
   <div>
-    <h3 class="verde">Cor Secundária</h3>
+    <h3>Cor Secundária</h3>
   </div>
   <div>
-    <h3 class="purple">Cor Complementar</h3>
+    <h3>Cor Complementar</h3>
   </div>
   <div>
-    <h3 class="black">Cor Escura</h3>
+    <h3>Cor Escura</h3>
   </div>
   <div>
-    <h3 class="clear-color">Cor Clara</h3>
+    <h3>Cor Clara</h3>
   </div>
 </body>
 </html>
