exercício de fixação

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes-Descendentes.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes-Descendentes.html
@@ -17,28 +17,28 @@
       <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
     </ol>
     <h3>As maiores linguagens de programação:</h3>
-    <ul>
+    <ul class="firstList">
       <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
+      <li class="pink">Java</li>
+      <li class="pink">JavaScript</li>
       <li>C#</li>
       <li>C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
       <li>
-        <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+        <a id="orange" href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
-      <li>
+      <li class="green">
         <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
       </li>
-      <li>
+      <li id="black">
         <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
-      <li>
+      <li id="yellow">
         <a href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
-      <li>
+      <li class="green">
         <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
