Adicionando cor ao hover, e arrumando background pink

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes-Descendentes.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes-Descendentes.html
@@ -27,19 +27,19 @@
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
       <li>
-        <a id="orange" href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+        <a class="orange" href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
-      <li class="green">
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+      <li>
+        <a class="green" href="https://www.w3schools.com/" target="_blank">W3Schools</a>
       </li>
-      <li id="black">
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
+      <li>
+        <a class="black" href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
-      <li id="yellow">
-        <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+      <li>
+        <a class="yellow" href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
-      <li class="green">
-        <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
+      <li>
+        <a class="green" href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
   </body>
