Ajustando novamente pois estava modificando com a página minimizada

--- a/fundamentos/bloco-3-introducao-a-html-e-css/exercicio-inline-block.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/exercicio-inline-block.html
@@ -18,7 +18,8 @@
         text-align: center;
         width: 200px;
         display: inline-block;
-        margin-left: 320px;
+        margin-left: 800px;
+        margin-right: 500px;
       }
 
       .second {
@@ -28,7 +29,7 @@
         text-align: center;
         width: 300px;
         display: inline-block;
-        margin-left: 130px;
+        margin-left: 600px;
       }
 
       .third {
@@ -43,19 +44,19 @@
         display: inline-block;
       }
       .prize1 {
-          margin-left: 185px;
+          margin-left: 650px;
       }
       li.second-place-prize {
           display: inline-block;
       }
       .prize2 {
-          margin-left: 185px;
+          margin-left: 650px;
       }
       .third-place-prize {
           display: inline-block;
       }
       .prize3 {
-          margin-left: 185px;
+          margin-left: 650px;
       }
 
     </style>
