--- a/fundamentos/bloco-3-introducao-a-html-e-css/introducao-a-html-e-css.4/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/introducao-a-html-e-css.4/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header><h1>Soco a 80km/h</h1></header>
+    <header><h1>Soco a 80km/h: Conheça o Stomatopoda</h1></header>
     <nav><ul class="first-list">
         <li><a class="link-none" href="#main-page">Página Inicial</a></li>
         <li><a class="link-none" href="#about">Sobre</a></li>
