--- a/fundamentos/bloco-5-dom-eventos-web-storage/dia-1-dom-e-seletores/index.html
+++ b/fundamentos/bloco-5-dom-eventos-web-storage/dia-1-dom-e-seletores/index.html
@@ -3,17 +3,11 @@
   <body>
     <header>
       <h2 id="page-title">Título</h2>
-      <p id="paragraph">Dê uma cor para este parágrafo!</p>
+      <p class="paragraph">Dê uma cor para este parágrafo!</p>
       <h4 id="subtitle">Subtítulo</h4>
-      <p id="second-paragraph">Segundo parágrafo!</p>
+      <p class="paragraph">Segundo parágrafo!</p>
     </header>
-    <script>
-        document.getElementById("page-title").innerText = "Interestelar";
-        const secondParagraph = document.getElementById("second-paragraph");
-        secondParagraph.style.color = "green";
-      const paragraph = document.getElementById("paragraph");
-      paragraph.style.color = "red";
-      const subtitle = document.getElementById("subtitle").innerText = "Parágrafo de cor verde embaixo";
+    <script src="javaScript.js"></script>
     </script>
   </body>
 </html>
